# dummy-ta

./: .dev.env  Dockerfile  Makefile  README.md  docker-compose.yml  main.py  pyproject.toml  requirements.txt
app/: main.py
app/api/v1/: chat_endpoints.py
app/core/: logger.py  settings.py
app/services/: chat_service.py
models/: quentin.cfg
