[tool.poetry]
name = "dummy-ta"
version = "0.1.0"
description = "Dummy TA"
package-mode = false
readme = "README.md"
packages = [{include = "app"}]

[tool.poetry.dependencies]
python = "^3.10"
llama-cpp-python = "^0.3.5"
huggingface-hub = "^0.26.5"
python-dotenv = "^1.0.1"
fastapi = "^0.115.6"
uvicorn = "^0.34.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
